Reduce to max-w-6xl, fix layout shift by forcing scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-y: scroll;
+}
+
 @layer base {
   body {
     font-family: 'Prompt', sans-serif;
